Classes and Id's

--- a/Box-Model.html
+++ b/Box-Model.html
@@ -22,7 +22,7 @@
 
 <body>
     <h1>Box Model</h1>
-
+    <!-- Box Model Consist of following 3 things -->
     <!--
     Margin ==> It is the space outside the box which separates it from other boxes.
 
