added content in login form

--- a/Login form.html
+++ b/Login form.html
@@ -35,7 +35,16 @@
     <div class="outer-box">
 
         <div class="inner-box">
-
+            <form action="">
+            <h1>Login</h1>
+            <p>Username</p>
+            <input type="text" placeholder="Enter you name">
+            <p>Password</p>
+            <input type="password" >
+            <p>Email</p>
+            <input type="email"> <br>
+            <input type="submit">
+        </form>
         </div>
 
     </div>
